# Markov_algorithm_compiler

./: .gitignore  AST.cpp  AST.h  CMakeLists.txt  CMakeLists.txt.user.43ccf80  Makefile  Markov.IN  Markov_algo.atg  Markov_algo.cpp.atg  Parser.cpp  Parser.frame  Parser.h  ProgOld.atg  ProgOld.cpp.atg  README.md  Scanner.cpp  ex.sh  expr_copy.atg  file.cpp  get_AST.cpp  get_AST.h  main.cpp  mainwindow.cpp  run.bat  run_calc.bat  test.cpp  test.txt  test1.IN  test_main.cpp  test_main.h  test_tables.cpp  tree_creation.h
AST/: Makefile  Parser.h  Scanner.h  run.bat
Qt_GUI/: CMakeLists.txt  codehighlighter.cpp  codehighlighter.h  file.h  file.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_tables.h
dev/: CMakeLists.txt
dev/get_AST/: build_AST.cpp  build_AST.h  get_AST.cpp  get_AST.h
dev/syntax_tree/: CMakeLists.txt  Includes.h  Markov_algo.cpp.atg  Scanner.h
get_AST/: build_AST.cpp  get_AST.cpp  get_AST.h
googletest-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  googletest-distribution.sln
googletest-build/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
googletest-build/googlemock/gmock.dir/Debug/gmock.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
googletest-build/googlemock/gmock_main.dir/Debug/gmock_main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  gmock_main.lastbuildstate
googletest-build/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
googletest-build/googletest/gtest.dir/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
googletest-build/googletest/gtest_main.dir/Debug/: gtest_main.lib.recipe
googletest-build/googletest/gtest_main.dir/Debug/gtest_main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  gtest_main.lastbuildstate
googletest-build/lib/Debug/: gtest_main.lib
googletest-build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
googletest-build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
googletest-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
syntax_tree/: AST.h  CMakeLists.txt  Markov_algo.cpp.atg  MyException.h  Parser.cpp  Parser.frame  Parser.h  Scanner.cpp
tests/: Markov1.IN  Markov10.IN  Markov12.IN  Markov13.IN  Markov14.IN  Markov2.IN  Markov3.IN  Markov4.IN  Markov5.IN  Markov6.IN  Markov7.IN  Markov8.IN  Markov9.IN
untitled/: CMakeLists.txt  file.cpp  file.h  file.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.txt  test_tables.cpp  test_tables.h
чтобы не потерялось/: calc.IN  example.cpp.atg  expr.cpp.atg
